[package]
  edition = "2021"
  name = "counting-contract"
  version = "0.1.0"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
  crate-type = ["cdylib", "rlib"]

[dependencies]
  cosmwasm-std = "1.0.0"
  serde = { version = "1.0.0", features = ["derive"] }

[dev-dependencies]
  cw-multi-test = "0.16.2"
