[package]
  edition = "2021"
  name = "counting-contract"
  version = "0.1.0"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
  crate-type = ["cdylib", "rlib"]

[features]
  library = []
  tests = ["library", "cw-multi-test"]

[dependencies]
  cosmwasm-schema = "1.2.1"
  cosmwasm-std = "1.0.0"
  cw-multi-test = { version = "0.16.2", optional = true }
  cw-storage-plus = "1.0.1"
  schemars = "0.8.12"
  serde = { version = "1.0.0", features = ["derive"] }
  thiserror = "1.0.38"

[dev-dependencies]
  cw-multi-test = "0.16.2"
